--- a/assets/css/_global.scss
+++ b/assets/css/_global.scss
@@ -264,6 +264,6 @@ blockquote {
 
 .page-index {
   padding-top: 100px;
-  background: url('/images/header-bg.png') no-repeat top;
-  background-size: contain;
+  background: url('/images/header-bg.png') no-repeat top center;
+  background-size: 1600px;
 }
