--- a/assets/css/config/_typography.scss
+++ b/assets/css/config/_typography.scss
@@ -13,7 +13,7 @@ $global-weight-bold: bold;
 
 // Headings
 
-$header-font-family: 'Overpass Mono', monospace;
+$header-font-family: 'Overpass', monospace;
 $header-font-weight: $global-weight-bold;
 $header-font-style: normal;
 $header-lineheight: 1.3;
