--- a/assets/css/_global.scss
+++ b/assets/css/_global.scss
@@ -264,6 +264,5 @@ blockquote {
 
 .page-index {
   padding-top: 100px;
-  background: url('/images/header-bg.png') no-repeat top center;
-  background-size: 1600px;
+  background: url('/images/header-bg.jpg') no-repeat top center;
 }
