--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -17,7 +17,7 @@
 @include foundation-top-bar;
 @include foundation-title-bar;
 @include foundation-menu;
-@include foundation-prototype-spacing;
+// @include foundation-prototype-spacing;
 @include foundation-responsive-embed;
 
 // Overrides
