Implements the form

--- a/assets/css/_global.scss
+++ b/assets/css/_global.scss
@@ -262,7 +262,8 @@ blockquote {
   }
 }
 
-.page-index {
+.page-index,
+.page-members-apply {
   padding-top: 100px;
   background: url('/images/header-bg.jpg') no-repeat top center;
 }
