--- a/assets/css/config/_forms.scss
+++ b/assets/css/config/_forms.scss
@@ -30,9 +30,8 @@ form {
 }
 span.alert {
   display: block;
-  margin-bottom: 10px;
   font-size: 12px;
-  color: $red;
+  color: $primary;
 }
 
 em.required {
