--- a/assets/css/_global.scss
+++ b/assets/css/_global.scss
@@ -263,7 +263,8 @@ blockquote {
 }
 
 .page-index,
-.page-members-apply {
+.page-members-apply,
+.page-members-confirm {
   padding-top: 100px;
   background: url('/images/header-bg.jpg') no-repeat top center;
 }
