--- a/assets/css/config/_variables.scss
+++ b/assets/css/config/_variables.scss
@@ -10,6 +10,7 @@ $gray: #7D8285;
 $gray-light: lighten($gray, 30%);
 $grey-bg: #F5F6F8;
 $shadow: #1A1B23;
+$border: #E4E4E7;
 
 $gutter: 1rem;
 $primary-font: 'Overpass mono', monospace;
